--- a/src/Components/LandingPage/LandingPage.css
+++ b/src/Components/LandingPage/LandingPage.css
@@ -18,7 +18,9 @@
     position: absolute;
     top: 60%;
     left: 70%;
-    font-size: 12pt;
+    font-size: 14pt;
     text-align: center;
-    background-color: lightblue;
+    background-color: #cbf2ff;
+    color: #190f0f;
+    font-weight: bold;
 }
