--- a/src/Components/RenderTable/RenderTable.css
+++ b/src/Components/RenderTable/RenderTable.css
@@ -1,14 +1,14 @@
 @charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
 
-body {
+/* body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   line-height: 1.42em;
   color:#A7A1AE;
   background-color:#1F2739; 
 
-}
+} */
 
 h1 {
   font-size:3em; 
@@ -42,7 +42,8 @@ h2 a {
 	  font-weight: bold;
 	  font-size: 1em;
   text-align: left;
-  color: #185875;
+  /* color: #185875; */
+  color:#449ac1;
 }
 
 .container td {
@@ -58,14 +59,16 @@ h2 a {
 	  overflow: hidden;
 	  width: 60%;
 	  margin: 0 auto;
-  display: table;
-  padding: 0 0 8em 0;
+    display: table;
+    padding: 0 0 8em 0;
+    background-color: whitesmoke;
 }
 
 .container td, .container th {
 	  padding-bottom: 2%;
 	  padding-top: 2%;
-  padding-left:2%;  
+    padding-left:2%;
+    color: #FB667A;  
 }
 
 /* Background-color of the odd rows */
@@ -93,7 +96,8 @@ h2 a {
 
 .container td:hover {
   background-color: #FFF842;
-  color: #403E10;
+  /* color: #403E10; */
+  color:#FB667A;
   font-weight: bold;
   
   box-shadow: #7F7C21 -1px 1px, #7F7C21 -2px 2px, #7F7C21 -3px 3px, #7F7C21 -4px 4px, #7F7C21 -5px 5px, #7F7C21 -6px 6px;
@@ -112,7 +116,7 @@ h2 a {
 }
 .pageNumbers li {
   margin-right: 0.3em;
-  color: whitesmoke;
+  color: blue;
   user-select: none;
   cursor: pointer;
   font-size: 15px;
