--- a/src/Components/Tbody/Tbody.css
+++ b/src/Components/Tbody/Tbody.css
@@ -1,15 +1,15 @@
 @charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
 
-body {
+/* body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   line-height: 1.42em;
   color:#A7A1AE; 
-  /* background-color:#1F2739;  */
+  
   background-color: red;
 
-}
+} */
 
 h1 {
   font-size:3em; 
