--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,5 +1,13 @@
 .App{
      text-align: center;
- 
     
 }
+ /* .container {
+     height: 100%;
+     margin: 0 auto;
+     width: 100%;
+     min-width: 320px;
+     height: 100%;
+     display: flex;
+     flex-direction: column;
+}  */
