--- a/src/Components/LandingPage/LandingPage.css
+++ b/src/Components/LandingPage/LandingPage.css
@@ -1,4 +1,4 @@
-.landing {
+/* .landing {
     background-color: white;
     height: 601px;
     background-size: cover;
@@ -10,8 +10,8 @@
 .landing img {
     height: 100%;
     width: 100%;
-}
-
+} */
+/* 
 .landing h2 {
     width: 206px;
     height: 40px;
@@ -23,4 +23,24 @@
     background-color: #cbf2ff;
     color: #190f0f;
     font-weight: bold;
+} */
+
+.headerHome {
+    text-align: center;
+    margin:auto;
+}
+
+div img {
+    width: 100%;
+    height: 100%;
+}
+
+.fImg {
+    width: 200px;
+    height: 300px;
+    margin-top: 20px
+}
+
+.divWrapper {
+    padding: 50px;
 }
