--- a/src/Components/SignUp/SignUp.css
+++ b/src/Components/SignUp/SignUp.css
@@ -3,19 +3,14 @@
 
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
-html,body{
 
-}
 
-.container{
-/* height: 100%; */
+.contSignUp{
 align-content: center;
-
-
 background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
 background-size: cover;
 background-repeat: no-repeat;
-height: 100%;
+height: 100vh;
 font-family: 'Numans', sans-serif;
 }
 
