--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -2,12 +2,7 @@
      text-align: center;
     
 }
- /* .container {
-     height: 100%;
-     margin: 0 auto;
-     width: 100%;
-     min-width: 320px;
-     height: 100%;
-     display: flex;
-     flex-direction: column;
-}  */
+
+.container {
+    height: 100vh;
+}
