--- a/src/Components/RenderTable/RenderTable.css
+++ b/src/Components/RenderTable/RenderTable.css
@@ -38,7 +38,7 @@ h2 a {
 .blue { color: #185875; }
 .yellow { color: #FFF842; }
 
-.container th h1 {
+.containerTable th h1 {
 	  font-weight: bold;
 	  font-size: 1em;
   text-align: left;
@@ -46,7 +46,7 @@ h2 a {
   color:#449ac1;
 }
 
-.container td {
+.containerTable td {
 	  font-weight: normal;
 	  font-size: 1em;
   -webkit-box-shadow: 0 2px 2px -2px #0E1119;
@@ -54,7 +54,7 @@ h2 a {
 	        box-shadow: 0 2px 2px -2px #0E1119;
 }
 
-.container {
+.containerTable {
 	  text-align: left;
 	  overflow: hidden;
 	  width: 60%;
@@ -64,7 +64,7 @@ h2 a {
     background-color: whitesmoke;
 }
 
-.container td, .container th {
+.containerTable td, .containerTable th {
 	  padding-bottom: 2%;
 	  padding-top: 2%;
     padding-left:2%;
@@ -72,32 +72,32 @@ h2 a {
 }
 
 /* Background-color of the odd rows */
-.container tr:nth-child(odd) {
+.containerTable tr:nth-child(odd) {
 	  background-color: #323C50;
 }
 
 /* Background-color of the even rows */
-.container tr:nth-child(even) {
+.containerTable tr:nth-child(even) {
 	  background-color: #2C3446;
 }
 
-.container th {
+.containerTable th {
 	  background-color: #1F2739;
 }
 
-.container td:first-child { color: #FB667A; }
+.containerTable td:first-child { color: #FB667A; }
 
-.container tr:hover {
+.containerTable tr:hover {
    background-color: #464A52;
 -webkit-box-shadow: 0 6px 6px -6px #0E1119;
 	   -moz-box-shadow: 0 6px 6px -6px #0E1119;
 	        box-shadow: 0 6px 6px -6px #0E1119;
 }
 
-.container td:hover {
+/* .containerTable td:hover {
   background-color: #FFF842;
   /* color: #403E10; */
-  color:#FB667A;
+  /* color:#FB667A;
   font-weight: bold;
   
   box-shadow: #7F7C21 -1px 1px, #7F7C21 -2px 2px, #7F7C21 -3px 3px, #7F7C21 -4px 4px, #7F7C21 -5px 5px, #7F7C21 -6px 6px;
@@ -107,7 +107,7 @@ h2 a {
 	  transition-duration: 0.4s;
 	  transition-property: all;
   transition-timing-function: line;
-}
+}  */
 
 .pageNumbers {
   list-style: none;
@@ -125,11 +125,9 @@ h2 a {
   padding: 5px;
 }
 .containerPagination {
-  margin:auto;
-  width:40%;
-  margin-top:5px;
-  display: inline-flex;
-  justify-content: space-evenly;
+  margin: auto;
+  width: 20%;
+  margin-top: 5px;
 }
 @media (max-width: 800px) {
 .container td:nth-child(4),
