--- a/src/Components/Calendar/Calendar.css
+++ b/src/Components/Calendar/Calendar.css
@@ -83,6 +83,8 @@ tr {
     padding: 5px;
     background: white;
     border: 2px solid skyblue;
+    max-height: 280px;
+    overflow-y: auto;
 }
 
 .month-popup div {
