--- a/src/Components/MyCalendar/MyCalendar.css
+++ b/src/Components/MyCalendar/MyCalendar.css
@@ -9,6 +9,7 @@ tr {
     
     padding: 0;
     margin: 0;
+    font-size: 25px;
 }
 .divHeader {
     background-color: whitesmoke;
@@ -37,13 +38,14 @@ tr {
 .calendar-header td {
     border-spacing: 0;
     padding-left: 5px;
+
 }
 
 .day,
 .empty-slot,
 .week-day {
     text-align: center;
-    height: 40px;
+    height: 20px;
 }
 
 .week-day {
@@ -56,42 +58,34 @@ tr {
 
 .day {
     cursor: pointer;
-    width: 24px;
-    height: 24px;
-    line-height: 24px;
+    max-width: 15px;
+    max-height: 15px;
+    border-radius: 2%;
 }
 
 .current-day {
-    background-color: #4285f4;
-    width: 28px;
-    height: 28px;
-    line-height: 28px;
-    border-radius: 2%;
+     background-color: #4285f4;  
+     max-width: 15px;
+     max-height: 15px;
+     border-radius: 2%;
     color: white;
 }
 .selected-day {
     background-color:yellow;
-    width: 28px;
-    height: 28px;
-    line-height: 28px;
+    max-width: 15px;
+    max-height: 15px;
     border-radius: 2%;
     color: black;
 }
 
-.dietDay {
-    background-color: red;
-    width: 28px;
-    height: 28px;
-    line-height: 28px;
-    border-radius: 2%;
-    color: black;
-}
 
 .month-popup {
     position: absolute;
     padding: 5px;
     background: white;
     border: 2px solid skyblue;
+    max-height: 280px;
+    overflow-y: auto;
 }
 
 .month-popup div {
@@ -122,3 +116,4 @@ tr {
     color: red;
     cursor: pointer;
 }
+
