--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,28 @@
+*
+{
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   padding: 0;
   background-color: whitesmoke;
+}
+
+/* LAYOUT */
+
+header
+{
+  height: 9vh;
+}
+
+.main-section
+{
+  min-height: 82vh;
+}
+
+footer
+{
+  height: 9vh;
 }
