added new route myProfile

--- a/src/Components/MyCalendar/MyCalendar.css
+++ b/src/Components/MyCalendar/MyCalendar.css
@@ -72,7 +72,7 @@ tr {
 }
 
 .diet-day {
-    background-color:#6091eb;
+    background-color:#21b081;
     max-width: 15px;
     max-height: 15px;
     border-radius: 2%;
