--- a/src/Components/MyProfile/MyProfile.css
+++ b/src/Components/MyProfile/MyProfile.css
@@ -60,14 +60,8 @@ h3 {
     text-align: center;
 }
 
- .modal1 {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1050;
-    display: flex;  
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    outline: 0;
-}  
+.mymodal {
+    background-color: red;
+    font-size: 200px;
+}
+
