--- a/src/Components/Diet/Diet.css
+++ b/src/Components/Diet/Diet.css
@@ -137,5 +137,16 @@ h2 {
     border-radius: 2px;
 }
 
+.headerInstructions {
+    margin: auto;
+    padding: 10px
+}
+.headerInstructions h4 {
+    text-align: center;
+}
 
-
+.modal.show .modal-dialog {
+    -webkit-transform: none;
+    transform: none;
+    top: 15%;
+}
