--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -9,6 +9,9 @@
     float: left;
     width: 80%;
     background: #f1f1f1;
+    margin: auto;
+    max-width: 300px;
+    padding: 10px
   }
   
   .searchField button {
