--- a/src/Components/UI/MyModal/MyModal.css
+++ b/src/Components/UI/MyModal/MyModal.css
@@ -4,7 +4,7 @@
     background-color: white;
     width: 70%;
     border: 1px solid #ccc;
-    box-shadow: 1px 1px 1px #6ec86e;
+    /* box-shadow: 1px 1px 1px #6ec86e; */
     padding: 16px;
     left: 15%;
     top: 30%;
@@ -13,6 +13,15 @@
     text-align: center;
 }
 
+
+/* .modal-dialog {
+    position: relative;
+    width: auto;
+    margin: 0.5rem;
+    pointer-events: none;
+    top: 20%;
+    left:30%;
+} */
 @media (min-width: 600px) {
     .Modal {
         width: 500px;
