--- a/src/Components/Diet/Diet.css
+++ b/src/Components/Diet/Diet.css
@@ -21,17 +21,16 @@
     color: #0000af;
 }
 .dailyGoal {
-    font-size: 40px;
+    font-size: 30px;
     font-weight: bold;
     color:green;
 }
 
 .dinamicTableTd {
-    /* font-size:17px; */
     font-weight: bold;
-    /* color:#43c9f3; */
     text-transform: capitalize;
-    color: #43c9f3;
+    color: #19ba4a;
+    font-size: 20px;
 }
 
 .mealTable {
@@ -47,11 +46,11 @@
 }
 
 .mealTable h3 {
-    color: #0e7596;
+    color: #23c6a1;
 }
 
 .dangerZone {
-    font-size: 40px;
+    font-size: 35px;
     font-weight: bold;
     color: red;
 }
@@ -68,14 +67,17 @@
 .buttonDelete {
     background-color: red;
     border: red;
-    border-radius: 45%;
+    border-radius: 55%;
     color: white;
-    height: 30px;
-    width: 30px;
-    line-height: 20px;
+    height: 20px;
+    width: 20px;
+    vertical-align: middle;
     
 }
 
+.buttonIcon {
+    font-size: 20px;
+}
 .fillCorrect {
    color:#477280;
     cursor:pointer;
@@ -100,10 +102,6 @@
 }
 
 
-.userTable button {
-    margin-top: 30px;
-}
-
 h1 {
     color: #09b45dc9;
     font-size: 2rem; 
@@ -117,6 +115,9 @@ h2 {
     font-style: italic;
 }
 
+h3 {
+    color: #149d57;
+}
 
 .btnConfirm-btnSucsses {
     width: 40px;
