added new features and corrected css with cond logic

--- a/src/Components/Diet/Diet.css
+++ b/src/Components/Diet/Diet.css
@@ -72,11 +72,13 @@
     height: 20px;
     width: 20px;
     vertical-align: middle;
+    margin-left: 10px;
     
 }
 
 .buttonIcon {
-    font-size: 20px;
+    font-size: 12px;
+    vertical-align: middle;
 }
 .fillCorrect {
    color:#477280;
