--- a/src/Components/Bmr/Bmr.css
+++ b/src/Components/Bmr/Bmr.css
@@ -3,7 +3,7 @@
     margin: 20px auto;
     border: 2px solid 888888;
     padding: 8px;
-    box-shadow: 5px 10px #888888;
+    /* box-shadow: 5px 10px #888888; */
     background-color: #0d430b;
    
 }
