--- a/src/Components/FirebaseTable/FirebaseTable.css
+++ b/src/Components/FirebaseTable/FirebaseTable.css
@@ -1,12 +1,12 @@
 .firebaseTable {
-    border: 1px solid blue;
     width: 100%;
     margin: auto;
     text-align: center;
+    background-color: white;
 }
 
 .divDinamicTable {
     overflow-y: auto;
     max-height: 450px;
-    min-height: 400px;
 }
+
