--- a/src/Components/SignIn/SignIn.css
+++ b/src/Components/SignIn/SignIn.css
@@ -6,7 +6,7 @@
 
 .cont{ 
 align-content: center;
-background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
+/* background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg'); */
 background-size: cover;
 background-repeat: no-repeat;
 height: 100%;
@@ -18,7 +18,9 @@ height: 440px;
 margin-top: auto;
 margin-bottom: auto;
 width: 400px;
-background-color: rgba(0,0,0,0.5) !important;
+background-color: white;
+box-shadow: 0 0 1px 1px rgba(50, 50, 50, 0.1);
+/* background-color: rgba(0,0,0,0.5) !important; */
 }
 
 .card-body {
@@ -30,7 +32,7 @@ background-color: rgba(0,0,0,0.5) !important;
 .social_icon span{
 font-size: 60px;
 margin-left: 10px;
-color: #FFC312;
+color: #4eb54e;
 }
 
 .social_icon span:hover{
@@ -39,7 +41,7 @@ cursor: pointer;
 }
 
 .card-header h3{
-color: white;
+color: #489848;
 }
 
 .social_icon{
@@ -50,8 +52,9 @@ top: -45px;
 
 .input-group-prepend span{
 width: 50px;
-background-color: #FFC312;
-color: black;
+/* background-color: #FFC312; */
+background-color: #489848;
+color: white;
 border:0 !important;
 }
 
@@ -74,24 +77,27 @@ margin-right: 5px;
 }
 
 .login_btn{
-color: black;
-background-color: #FFC312;
-width: 100px;
+color: white;
+/* background-color: #4eb54e; */
+background-color: #1c981c;
 }
 
 .login_btn:hover{
-color: black;
-background-color: white;
+color: white;
+background-color: #4eb54e;
 }
 
-.links{
+/* .links{
 color: white;
-}
+} */
 
 .errorMessage {
     color: red;
 }
 
+.colorUpdate {
+    background-color: white;
+}
 /* .buttonTextRight {
     text-align: right;
 } */
