--- a/src/Components/ConditionalLandingPage/ConditionalLandingPage.css
+++ b/src/Components/ConditionalLandingPage/ConditionalLandingPage.css
@@ -28,7 +28,7 @@
 .headerHome {
     text-align: center;
     margin:auto;
-    margin-top:20px;
+    margin-top: 150px;
     padding: 10px;
 
 }
@@ -38,17 +38,27 @@ div img {
     height: 100%;
 }
 
-.fImg {
-    width: 200px;
-    height: 300px;
-    margin-top: 55px;
-}
+
 
 .divWrapper {
-    padding: 50px;
+    
 }
 
-.marginElements {
+.divWrapper h1 {
+    text-align: left;
+    color: #444242;
+    font-size: 40px;
+}
+
+.divWrapper p {
+    text-align: left;
+    margin: 0;
+    font-size: 20px;
+    line-height: 1.5;
+}
+
+
+/* .marginElements {
     margin-top:20px;
     color: #1e7a7a;
-}
+} */
