--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,14 +1,14 @@
-.App{
-     text-align: center;
-    
+.App 
+{
+ text-align: center;
 }
 
 .m-left-15
 {
-    margin-left: 15px;
+ margin-left: 15px;
 }
 
 .m-right-15
 {
-    margin-right: 15px;
+ margin-right: 15px;
 }
