--- a/src/Components/RenderTable/RenderTable.css
+++ b/src/Components/RenderTable/RenderTable.css
@@ -5,7 +5,7 @@ h1 {
   font-weight: 300;
   line-height:1em;
   text-align: center;
-  color: #4DC3FA;
+  color: #bae0bd;
 }
 
 h2 {
@@ -14,34 +14,32 @@ h2 {
   text-align: center;
   display: block;
   line-height:1em;
-  padding-bottom: 2em;
-  color: #FB667A;
+  padding-bottom: 2em; 
 }
 
 h2 a {
   font-weight: 700;
   text-transform: uppercase;
-  color: #FB667A;
   text-decoration: none;
 }
 
-.blue { color: #185875; }
+.blue { color: #bae0bd; }
 .yellow { color: #FFF842; }
 
 .containerTable th h1 {
 	  font-weight: bold;
 	  font-size: 17px;
     text-align: left;
-    color:#449ac1;
+    color: white;
     max-width: 200px;
 }
 
 .containerTable td {
 	  font-weight: normal;
 	  font-size: 17px;
-  -webkit-box-shadow: 0 2px 2px -2px #0E1119;
-	   -moz-box-shadow: 0 2px 2px -2px #0E1119;
-          box-shadow: 0 2px 2px -2px #0E1119;
+  -webkit-box-shadow: 0 2px 2px -2px #bae0bd;
+	   -moz-box-shadow: 0 2px 2px -2px #bae0bd;
+          box-shadow: 0 2px 2px -2px #bae0bd;
           text-overflow: ellipsis;
           white-space: nowrap;
           overflow: hidden;
@@ -55,40 +53,41 @@ h2 a {
 	  width: 100%;
     display: table;
     padding: 0 0 8em 0;
-    background-color: whitesmoke;
+    /* //background-color: whitesmoke; */
 }
 
 .containerTable td, .containerTable th {
-	  padding-bottom: 2%;
-	  padding-top: 2%;
-    padding-left:2%;
-    color: #FB667A;
-    max-width: 200px;
-    font-size: 16px;  
+    padding-bottom: 2%;
+    padding-top: 2%;
+    padding-left: 2%;
+    color: #52b463;
+    max-width: 100px;
+    font-size: 14px;
+    /* background: white; */
 }
 
 /* Background-color of the odd rows */
 .containerTable tr:nth-child(odd) {
-	  background-color: #323C50;
+	  /* background-color: #323C50; */
 }
 
 /* Background-color of the even rows */
 .containerTable tr:nth-child(even) {
-	  background-color: #2C3446;
+	  /* background-color: #2C3446; */
 }
 
 .containerTable th {
-    background-color: #1F2739;
-    max-width: 200px;
+    /* background-color: #1F2739; */
+    max-width: 100px;
+    background: #52b463;
+    color: white !important;  
 }
 
-.containerTable td:first-child { color: #FB667A; }
+.containerTable td:first-child { color: #52b463; }
 
 .containerTable tr:hover {
-   background-color: #464A52;
--webkit-box-shadow: 0 6px 6px -6px #0E1119;
-	   -moz-box-shadow: 0 6px 6px -6px #0E1119;
-	        box-shadow: 0 6px 6px -6px #0E1119;
+   /* background-color: #464A52; */
+   background-color: #e4fde9;
 }
 
 .pageNumbers {
@@ -98,11 +97,13 @@ h2 a {
 }
 .pageNumbers li {
   margin-right: 0.3em;
-  color: blue;
+  color: #52b463;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
   cursor: pointer;
-  font-size: 15px;
-  border: 2px solid black;
+  font-size: 17px;
   font-weight: bold;
   padding: 5px;
 }
