--- a/src/Components/SignUp/SignUp.css
+++ b/src/Components/SignUp/SignUp.css
@@ -18,11 +18,12 @@ font-family: 'Numans', sans-serif;
 margin-top: auto;
 margin-bottom: auto;
 width: 400px;
+height: fit-content;
 /* background-color: rgba(0,0,0,0.5) !important; */
 }
 
 .card-signUp {
-height: 475px;
+/* height: 475px; */
 }
 
 .card h3 {
@@ -59,6 +60,13 @@ color: white;
 background-color: #1c981c;
 width: 100%;
 margin-bottom: 10px;
+}
+
+.card-body {
+    -webkit-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 1.25rem;
+    height: inherit;
 }
 
 .signUp_btn:hover{
